--- a/src/main/resources/templates/admin/vendas.html
+++ b/src/main/resources/templates/admin/vendas.html
@@ -2,12 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Gerenciar Vendas - Meg Kids</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <link rel="stylesheet" href="/css/main-theme-desktop.css">
+    <link rel="stylesheet" href="/css/responsivo.css">
 </head>
 <body>
 
